# OpenShell

./: .gitignore  AGENTS.md  Cargo.toml
.github/workflows/: docs-preview-build.yml  docs-preview-deploy.yml  slack-new-issue.yml
architecture/: custom-vm-runtime.md
crates/openshell-bootstrap/src/: docker.rs  paths.rs
crates/openshell-cli/src/: main.rs
crates/openshell-core/src/: settings.rs
crates/openshell-driver-kubernetes/src/: driver.rs
crates/openshell-prover/: Cargo.toml
crates/openshell-prover/registry/apis/: github.yaml
crates/openshell-prover/registry/binaries/: claude.yaml  curl.yaml  gh.yaml  git.yaml  nc.yaml  node.yaml  python3.yaml  ssh.yaml  wget.yaml
crates/openshell-prover/src/: accepted_risks.rs  credentials.rs  finding.rs  lib.rs  model.rs  policy.rs  queries.rs  registry.rs  report.rs
crates/openshell-prover/testdata/: accepted-risks.yaml  credentials.yaml  policy.yaml
crates/openshell-sandbox/: Cargo.toml
crates/openshell-sandbox/src/: lib.rs  log_push.rs  main.rs  opa.rs  (+2 more)
crates/openshell-vm/: README.md  build.rs  pins.env
deploy/docker/: Dockerfile.cluster  Dockerfile.gateway  Dockerfile.images  Dockerfile.supervisor  UPSTREAM-BASE-UPGRADE.md  cluster-entrypoint.sh
docs/observability/: accessing-logs.md  logging.md  ocsf-json-export.md
e2e/python/: test_sandbox_policy.py
python/openshell/: sandbox.py
tasks/: docker.toml  test.toml  vm.toml
tasks/scripts/: build-libkrun-macos.sh  build-libkrun.sh  build-rootfs-tarball.sh  bundle-vm-runtime.sh  compress-vm-runtime.sh  docker-build-cluster.sh  docker-build-local.sh
(+27 files in other folders)
