# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-prover"
description = "Formal policy verification for OpenShell sandboxes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
openshell-core = { path = "../openshell-core" }
openshell-policy = { path = "../openshell-policy" }
z3 = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
owo-colors = { workspace = true }

[lints]
workspace = true
